# Nizai

./: .gitignore  LICENSE (MIT)  Makefile  README.md  __init__.py  cli.py  pyproject.toml
.github/workflows/: ci.yml
core/: agent.py  llm.py  memory.py  planner.py  tools.py
tests/: test_agent.py
