[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge"
version = "0.1.0"
description = "Lightweight agent framework (MVP)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Rustam Shiriyev" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "tenacity>=8.2.0",
    "tiktoken>=0.4.0"
]

[project.optional-dependencies]
openai = ["openai>=0.27.0"]
http = ["requests>=2.28.0", "httpx>=0.24.0"]
toollibs = ["chromadb>=0.1.0"]

[tool.setuptools.packages.find]
where = ["agentforge"]

[project.scripts]
agentforge-cli = "agentforge.cli:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.10
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

